--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   "private": false,
   "dependencies": {
     "geojson": "0.5.0",
-    "js2xmlparser": "4.0.0",
-    "ramda": "0.26.1"
+    "js2xmlparser": "4.0.0"
   },
   "devDependencies": {
     "fast-check": "1.20.1",
