--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pxi-sandbox",
   "version": "0.9.0",
-  "description": "A sandbox for developing plugins for pxi (pixie), the small, fast and magic command-line data processor",
+  "description": "A sandbox for developing plugins for pxi (pixie), the small, fast and magical command-line data processor",
   "keywords": [
     "pxi",
     "pixie",
