--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   "private": true,
   "dependencies": {
     "geojson": "0.5.0",
-    "js2xmlparser": "4.0.0"
+    "js2xmlparser": "4.0.0",
+    "lodash": "4.17.15",
+    "ramda": "0.26.1"
   },
   "devDependencies": {
     "fast-check": "1.20.1",
